<resources>
    <string name="app_name">Special Fitness</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help Center</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_workouts">Workouts</string>
    <string name="nav_workout_savedworkouts">Saved Workouts</string>
    <string name="nav_food_diary">Food</string>
    <string name="nav_supplement_diary">Supplement</string>
    <string name="nav_water_diary">Water</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_user_profile">Profile</string>

    <string name="title_activity_profile">@string/nav_user_profile</string>
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="title_activity_workout">@string/nav_workouts</string>

    <string name="title_activity_advertisement_activity">advertisement_activity</string>

    <string name="please_select_str">Please Select</string>
    <string name="gender_option_male">Male</string>
    <string name="gender_option_female">Female</string>
    <string name="gender_option_other">Other</string>
    <string name="option_prefernottosay">Prefer not to say</string>

    <string name="gym_member_option_member">Gym Member</string>
    <string name="gym_member_option_notmember">Not a Gym Member</string>


    <!-- User Profile Headers -->
    <string name="nickname_header_text">Nickname</string>
    <string name="nickname_help_text"></string>
    <string name="gender_header_text">Gender</string>
    <string name="gender_help_text"></string>
    <string name="dob_header_text">Date Of Birth</string>
    <string name="weight_header_text">Weight</string>
    <string name="height_header_text">Height</string>
    <string name="dob_help_text"></string>
    <string name="profile_cover">Profile Cover</string>
    <string name="profile_background_image_description">Profile Cover</string>
    <string name="activity_gym_member_text">Gym Member</string>

    <!-- Strings related to Settings -->
    <string name="weight_unit_title">Weight</string>
    <string name="height_unit_title">Height</string>
    <string name="distance_unit_title">Distance</string>
    <string name="liquid_unit_title">Fluid Intake</string>
    <string name="units_header">Units</string>
    <string name="units_section_header">Units</string>
    <string name="profile_section_header">User</string>
    <string name="general_section_header">General</string>
    <string name="your_profile_header">Profile</string>
    <string name="weight_increment_title">Weight Increment</string>
    <string name="workout_settings_header">Workout</string>

    <string name="week_preferences">Your Week</string>
    <string name="weekday_start_title">Week Start Day</string>

    <!-- Preference Keys -->
    <string name="first_time_launch_key">uk.co.pped.specialfitness.key.first_time_launch</string>
    <string name="week_defaults">uk.co.pped.specialfitness.key.week_defaults</string>
    <string name="week_day_start">uk.co.pped.specialfitness.key.week_day_start</string>
    <string name="available_workout_days">uk.co.pped.specialfitness.key.available_workout_days</string>

    <string name="units_defaults">uk.co.pped.specialfitness.key.units_defaults</string>
    <string name="weight_units_key">uk.co.pped.specialfitness.key.weight_units</string>
    <string name="height_units_key">uk.co.pped.specialfitness.key.height_units</string>
    <string name="distance_units_key">uk.co.pped.specialfitness.key.distance_units</string>
    <string name="fluid_intake_units_key">uk.co.pped.specialfitness.key.fluid_intake_units</string>

    <string name="workout_default_switch_key">uk.co.pped.specialfitness.key.workout_default_switch</string>

    <string name="default_weight_increment_key">uk.co.pped.specialfitness.key.weight_increment</string>
    <string name="default_number_of_sets">uk.co.pped.specialfitness.key.number_of_sets</string>


    <!-- Preferences Values and Defaults -->
    <string name="weekday_start_default">Monday</string>

    <string name="height_default">@string/height_cm</string>
    <string name="height_cm">cm</string>
    <string name="height_ft">ft</string>

    <string name="weight_default">@string/weight_kg</string>
    <string name="weight_kg">kg</string>
    <string name="weight_stone">stone</string>
    <string name="weight_lbs">lbs</string>

    <string name="distance_default">km</string>

    <string name="fluid_intake_default">ml</string>

    <string name="default_weight_increment">10</string>

</resources>
