<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="User">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_menu_profile"
                    android:title="@string/your_profile_header" />
                <item
                    android:id="@+id/your_goals_and_targets"
                    android:title="Your Goals" />
            </group>
        </menu>
    </item>

    <item android:title="Workout Diary">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_workout_planner"
                android:icon="@drawable/ic_workout_planner"
                android:title="@string/nav_workout_planner" />
            <item
                android:id="@+id/nav_workout_saved"
                android:icon="@drawable/ic_saved_workouts"
                android:title="@string/nav_workout_savedworkouts" />
            </group>
        </menu>
    </item>

    <item android:title="Nutrition Diary">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_food_diary"
                    android:icon="@drawable/ic_food_diary"
                    android:title="@string/nav_food_diary" />
                <item
                    android:id="@+id/nav_food_supplement_diary"
                    android:title="@string/nav_supplement_diary" />
                <item
                    android:id="@+id/nav_water_diary"
                    android:icon="@drawable/ic_nutrition_water_diary"
                    android:title="@string/nav_water_diary" />
            </group>
        </menu>
    </item>

    <item android:title="General">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/feedback"
                    android:title="Feedback"/>
                <item
                    android:id="@+id/privacy"
                    android:title="Privacy" />
            </group>
        </menu>
    </item>
</menu>
